--- a/demos/package.json
+++ b/demos/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "NODE_OPTIONS='--inspect' next dev",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
@@ -17,14 +17,17 @@
     "kendo": "*",
     "lodash": "^4.17.21",
     "next": "^13",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
+    "react": "experimental",
+    "react-dom": "experimental",
     "typescript": "4.8.4"
   },
   "devDependencies": {
     "@faker-js/faker": "^7.6.0",
     "@next/react-refresh-utils": "^13.0.2",
     "@types/lodash": "^4.14.188",
-    "turbo": "^1.6.3"
+    "@types/react": "^18.2.6",
+    "@types/react-dom": "^18.2.4",
+    "turbo": "^1.6.3",
+    "zustand": "^4.3.8"
   }
 }
