--- a/package.json
+++ b/package.json
@@ -7,12 +7,12 @@
     "packages/*"
   ],
   "peerDependencies": {
-    "react": "^18",
-    "react-dom": "^18"
+    "react": "experimental",
+    "react-dom": "experimental"
   },
   "devDependencies": {
-    "react": "^18",
-    "react-dom": "^18",
+    "react": "experimental",
+    "react-dom": "experimental",
     "@types/react": "^18",
     "@types/react-dom": "^18"
   }
