--- a/demos/package.json
+++ b/demos/package.json
@@ -3,20 +3,18 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "NODE_OPTIONS='--inspect' next dev",
+    "dev": "next dev",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
   },
   "dependencies": {
     "@types/node": "18.11.9",
-    "@types/react": "18.0.25",
-    "@types/react-dom": "18.0.8",
     "eslint": "8.27.0",
     "eslint-config-next": "13.0.2",
     "kendo": "*",
     "lodash": "^4.17.21",
-    "next": "^13",
+    "next": "canary",
     "react": "experimental",
     "react-dom": "experimental",
     "typescript": "4.8.4"
@@ -25,8 +23,8 @@
     "@faker-js/faker": "^7.6.0",
     "@next/react-refresh-utils": "^13.0.2",
     "@types/lodash": "^4.14.188",
-    "@types/react": "^18.2.6",
-    "@types/react-dom": "^18.2.4",
+    "@types/react": "^18",
+    "@types/react-dom": "^18",
     "turbo": "^1.6.3",
     "zustand": "^4.3.8"
   }
